feat: extend eval challenge schema
